--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,16 @@
-*, 
-*:before, 
-*:after {
-    box-sizing: border-box;
-    font-family: 'Times New Roman', Times, serif;
-    margin: 0;
-    padding: 0; 
-}
-body {
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+*
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     background-image: url("https://github.com/FENDdeveloperkei/updated-portfolio/blob/master/butterfly%202019.gif?raw=");
@@ -16,12 +18,13 @@ body {
     
 }
 .header {
-    background-color: #80ffff;
-    padding-top: 10px;
-    min-height: 50px;
-    border-bottom: black 8px dashed;
-    text-align: center;
-    margin-bottom: 15px;
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+     align-content: flex-end;
+     border-bottom: 2px dotted black;
+     margin-bottom: 10px;
+     background: linear-gradient(160deg, #98f9de 0%, #80ffff 100%);
 }
 
 .responsive-img {
@@ -41,9 +44,14 @@ body {
     font-size: 5vw;
 }
 
-.content-hdr, 
-.featured-item {
-    text-align: center;
+.photo img {
+  max-width: 55%;
+  height: auto;
+}
+
+.content {
+  text-align: center;
+  border-radius: 1em;
 }
 
 .featured-work {
@@ -51,62 +59,75 @@ body {
 }
 
 .featured-item {
-    margin: 20px 0;
+    width: 200px;
+    height: 150px;
+    border-radius: 4em;
 }
 .footer {
-    text-align: center
+    width: 100%;
+    font-size: 12px;
+    border-top: 5px dashed #E500B8;
+    padding: 1em;
+    width: 100%;
+    text-align: center;
+    color: #aa7ecd;
+    background: linear-gradient(160deg, #ffffff 30%, #98f9de 100%);
 }
-@media screen and (min-width: 480px) {
-    .text-hdr {
-        font-size: 6vw;
-    }
-    .text-item {
-        font-size: 4vw;
-    }
-    .featured-img {
-        width: 100%;
-    }
-}
-
-@media screen and (min-width: 720px) {
-    .header {
-        justify-content: space-between;
-        margin: 0 auto 30px;
-        text-align: left;
-    }
-    .header-text {
-        text-align: right;
-    }
-    .header,
-    .featured {
-        display: flex;
-        max-width: 1440px;
-    }
-    .featured {
-        margin: 30px auto 0;
-    }
-    .featured-item {
-        margin: 20px 20px 20px 0;
-    }
-    .featured-item:last-child {
-        margin-right: 0;
-    }
+/* Mobile styles */
+@media only screen and (max-width: 490px) {
+  body {
+    background-color: #ffffff;
+  }
 }
 
-@media screen and (min-width: 830px) {
-    .text-hdr {
-        font-size: 4vw;
-    }
-    .text-item {
-        font-size: 2vw;
-    }
+@media only screen and (min-width: 491px) and (max-width: 670px) {
+  body {
+    background-color: #ffffff;
+  }
+  .logo {
+    width: 60px;
+  }
+
+  .item-1, .item-2, .item-3 {
+    margin: 10px;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
-@media screen and (min-width: 1230px) {
-    .text-hdr {
-        font-size: 4vw;
-    }
-    .text-item {
-        font-size: 2vw;
-    }
+/* Tablet styles */
+@media only screen and (min-width: 671px) and (max-width: 960px) {
+  body {
+    background-color: #ffffff;
+  }
+  .featured-gallery {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+  }
+  .logo {
+    width: 70px;
+  }
+}
+
+/* Desktop styles */
+@media only screen and (min-width: 961px) {
+  body {
+    width: 960px;
+    margin: 0 auto;
+  }
+
+  .logo {
+    width: 70px;
+  }
+
+  .featured-gallery {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .section-header {
+    text-align: left;
+  }
 }
